ZIG-735: Fix take profit validation inconsistencies and error alignment.

--- a/src/components/TradingTerminal/StrategyForm/StrategyForm.scss
+++ b/src/components/TradingTerminal/StrategyForm/StrategyForm.scss
@@ -53,7 +53,8 @@
     }
 
     .errorText {
-      max-width: 250px;
+      display: block;
+      flex: 0 0 100%;
       text-align: left;
     }
 
